Added Type Hints

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,9 +15,11 @@
     <header>
         {% block header %}{% endblock %}
     </header>
-    <section class="container">
-        {% block section1 %}{% endblock %}
-    </section>
+    <main role="main">
+        <section class="container">
+            {% block section1 %}{% endblock %}
+        </section>
+    </main>
     <footer>
         {% block footer %}{% endblock %}
     </footer>
