--- a/app/templates/public/index.html
+++ b/app/templates/public/index.html
@@ -1,21 +1,21 @@
 {% extends 'base.html' %}
 {% block header %}
-<div class="container">
-    <div class="row  align-items-end">
-        <div class="name col">
-            <h1>Weather App</h1>
-        </div>
-    
-        <div class="search col">
-            <form action="#" method="post">
-                <label for="search_box">Enter City Name</label>
-                <input type="search" name="search" id="search_box" placeholder="City Name">
-                <input type="submit" value="Search">
-            </form>
+    <div class="container">
+        <div class="row  align-items-end">
+            <div class="name col">
+                <h1>Weather App</h1>
+            </div>
+        
+            <div class="search col">
+                <form action="#" method="post">
+                    <label for="search_box">Enter City Name</label>
+                    <input type="search" name="search" id="search_box" placeholder="City Name">
+                    <input type="submit" value="Search">
+                </form>
+            </div>
         </div>
     </div>
-</div>
-<br>
+    <br>
 {% endblock %}
     {% block section1 %}
     {% if  message %}
@@ -102,20 +102,20 @@
                 <table>
                     <thead>
                         <tr>
-                            <th>Day1</th>
-                            <th>Day2</th>
-                            <th>Day3</th>
-                            <th>Day4</th>
-                            <th>Day5</th>
+                            <th>{{ days[1][0] }}</th>
+                            <th>{{ days[1][1] }}</th>
+                            <th>{{ days[1][2] }}</th>
+                            <th>{{ days[1][3] }}</th>
+                            <th>{{ days[1][4] }}</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td>Rain/Temp</td>
-                            <td>Rain/Temp</td>
-                            <td>Rain/Temp</td>
-                            <td>Rain/Temp</td>
-                            <td>Rain/Temp</td>
+                            <td>{{ days[0][0]['weather'][0]['main'] }} {{ days[0][0]['weather'][0]['description'] }} | Temp {{ days[0][0]['main']['temp'] }}</td>
+                            <td>{{ days[0][1]['weather'][0]['main'] }} {{ days[0][1]['weather'][0]['description'] }} | Temp {{ days[0][1]['main'][main] }}</td>
+                            <td>{{ days[0][2]['weather'][0]['main'] }} {{ days[0][2]['weather'][0]['description'] }} | Temp {{ days[0][2]['main'][main] }}</td>
+                            <td>{{ days[3]['weather'][0]['main'] }} {{ days[3]['weather'][0]['description'] }} | Temp {{ days[3]['main'][main] }}</td>
+                            <td>{{ days[4]['weather'][0]['main'] }} {{ days[4]['weather'][0]['description'] }} | Temp {{ days[4]['main'][main] }}</td>
                         </tr>
                     </tbody>
                 </table>
